--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "@paypal/react-paypal-js": "^7.6.0",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
+    "mongoose": "^6.3.1",
     "next": "12.1.5",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "8.13.0",
