--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
 MONGODB_URL = mongodb+srv://Goutam_Choudhary:O3pBtXTusUYJy1Ix@cluster0.x4vlj.mongodb.net/pizza-DB?retryWrites=true&w=majority
-
-DB_USER_PASS = O3pBtXTusUYJy1Ix
+USER_NAME = admin
+PASS_WORD = 12345678
+TOKEN = dsadnajkscnskcnakc
