--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5"
   }
